Add fundamental javascript logic

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div id="calculator-border">
-        <div id="screen">
-        </div>
+    <div id="calculator">
+        <div id="screen"></div>
         <div id="first-row">
             <button id="ce-button">CE</button>
             <button id="equals-button">=</button>
